# noisy-clippy

./: .gitignore  Cargo.toml  README.md  absurd_extreme_comparisons.html  all.html  alloc_instead_of_core.html  almost_swapped.html  approx_constant.html  arithmetic.html  arithmetic_side_effects.html  as_conversion.html  as_conversions.html  as_ptr_cast_mut.html  assertions_on_constants.html  assertions_on_result_states.html  assign_op_pattern.html  async_yields_async.html  await_holding_lock.html  await_holding_refcell_ref.html  bad_bit_mask.html  bind_instead_of_map.html  blacklisted_name.html  blanket_clippy_restriction_lints.html  block_in_if_condition_stmt.html  blocks_in_if_conditions.html  bool_assert_comparison.html  bool_comparison.html  bool_to_int_with_if.html  borrow_as_ptr.html  borrow_deref_ref.html  borrow_interior_mutable_const.html  borrowed_box.html  box_collection.html  box_default.html  box_vec.html  boxed_local.html  branches_sharing_code.html  builtin_type_shadow.html  cargo.html  cargo_common_metadata.html  (+511 more)
.github/workflows/: ci.yml
src/: lints.rs  main.rs  name.rs  parse.rs  render.rs  tests.rs
