[package]
name = "noisy-clippy"
version = "0.0.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "How often is each Clippy lint suppressed on crates.io"
repository = "https://github.com/dtolnay/noisy-clippy"
publish = false

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
git2 = "0.13"
parking_lot = "0.11"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
rayon = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", default-features = false, features = ["full", "parsing", "visit"] }
tar = "0.4"
