[package]
name = "noisy-clippy"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "How often is each Clippy lint suppressed on crates.io"
edition = "2021"
keywords = ["clippy"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/dtolnay/noisy-clippy"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["deprecated", "derive"] }
flate2 = "1.0"
git2 = "0.18"
parking_lot = "0.12"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
rayon = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "visit"] }
tar = "0.4"
walkdir = "2.3"

[dev-dependencies]
quote = "1.0"
